--- a/templates/default/chef-server.rb.erb
+++ b/templates/default/chef-server.rb.erb
@@ -7,7 +7,7 @@ rabbitmq['node_ip_address'] = '0.0.0.0'
 
 oc_id['applications'] = {
   'analytics' => {
-    'redirect_uri' => "<%= node['chef_server12']['backend']['analytics_fqdn'] %>"
+    'redirect_uri' => "https://<%= node['chef_server12']['backend']['analytics_fqdn'] %>"
   }
 }
 <% end -%>
